Fix up messageText description alignment

--- a/skin/overlay.css
+++ b/skin/overlay.css
@@ -2,6 +2,7 @@
 }
 
 .socialite-title {
+  margin-bottom: 2px !important;
 }
 
 .socialite-score {
